<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/notesFragment"
        android:icon="@drawable/ic_grade"
        android:title="@string/nav_notes" />

    <item
        android:id="@+id/paymentsFragment"
        android:icon="@drawable/ic_payment"
        android:title="@string/nav_payments" />

    <item
        android:id="@+id/absencesFragment"
        android:icon="@drawable/ic_absence"
        android:title="@string/nav_absences" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />

</menu>
